<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.cloudera</groupId>
	<artifactId>cloudera-framework</artifactId>
	<packaging>pom</packaging>
	<version>1.3.3-cdh5.6.0</version>

	<prerequisites>
		<maven>3.3</maven>
	</prerequisites>

	<scm>
		<connection>scm:git:git@github.com:ggear/cloudera-framework.git</connection>
		<url>scm:git:git@github.com:ggear/cloudera-framework.git</url>
		<developerConnection>scm:git:git@github.com:ggear/cloudera-framework.git</developerConnection>
		<tag>cloudera-framework-1.3.3-cdh5.6.0</tag>
	</scm>

	<distributionManagement>
		<site>
			<url>scm:git:git@github.com:ggear/cloudera-framework.git</url>
		</site>
	</distributionManagement>

	<repositories>
		<repository>
			<id>cdh.repo</id>
			<url>https://repository.cloudera.com/content/groups/cloudera-repos</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>conjars.repo</id>
			<url>http://conjars.org/repo</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>kudu.repo</id>
			<url>http://52.63.86.162/tmph3l7m2vv103/sbin/kudu/parcels</url>
			<releases>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<properties>

		<maven.test.skip>false</maven.test.skip>
		<maven.system-test.skip>false</maven.system-test.skip>
		<maven.integration-test.skip>true</maven.integration-test.skip>
		<maven.data-download.skip>true</maven.data-download.skip>
		<maven.assembly.skip>false</maven.assembly.skip>

		<cdh-hadoop.version>2.6.0-cdh5.6.0</cdh-hadoop.version>
		<cdh-spark.version>1.5.0-cdh5.6.0</cdh-spark.version>
		<cdh-hive.version>1.1.0-cdh5.6.0</cdh-hive.version>
		<cdh-flume.version>1.6.0-cdh5.6.0</cdh-flume.version>
		<cdh-avro.version>1.7.6-cdh5.6.0</cdh-avro.version>
		<cdh-parquet.version>1.5.0-cdh5.6.0</cdh-parquet.version>
		<cdh-zookeeper.version>3.4.5-cdh5.6.0</cdh-zookeeper.version>
		<cdh-kafka.version>0.8.2.0-kafka-1.4.0</cdh-kafka.version>
		<cdh-kuduapi.version>0.7.1</cdh-kuduapi.version>
		<cdh-kudu.version>0.7.1-1.kudu0.7.1.p0.36</cdh-kudu.version>

		<snappy.version>1.1.1.7</snappy.version>
		<elephantbird.version>4.9</elephantbird.version>
		<slf4j.version>1.7.5</slf4j.version>
		<sysout-over-slf4j.version>1.0.2</sysout-over-slf4j.version>
		<junit.version>4.12</junit.version>

		<parcel-plugin.version>0.6.1</parcel-plugin.version>

		<java.version>1.7</java.version>
		<scala.version>2.10</scala.version>

		<os-platform.version />

		<project.runtime.heap.max>1024</project.runtime.heap.max>
		<project.runtime.perm.heap.max>256</project.runtime.perm.heap.max>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

	</properties>

	<profiles>
		<profile>
			<id>CMP</id>
			<properties>
				<maven.test.skip>true</maven.test.skip>
				<maven.system-test.skip>true</maven.system-test.skip>
				<maven.data-download.skip>true</maven.data-download.skip>
				<maven.assembly.skip>true</maven.assembly.skip>
			</properties>
		</profile>
		<profile>
			<id>BLD</id>
			<properties>
				<maven.test.skip>false</maven.test.skip>
				<maven.system-test.skip>false</maven.system-test.skip>
				<maven.data-download.skip>true</maven.data-download.skip>
				<maven.assembly.skip>true</maven.assembly.skip>
			</properties>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
		</profile>
		<profile>
			<id>PKG</id>
			<properties>
				<maven.test.skip>true</maven.test.skip>
				<maven.system-test.skip>true</maven.system-test.skip>
				<maven.data-download.skip>true</maven.data-download.skip>
				<maven.assembly.skip>false</maven.assembly.skip>
			</properties>
		</profile>
		<profile>
			<id>ALL</id>
			<properties>
				<maven.test.skip>false</maven.test.skip>
				<maven.system-test.skip>false</maven.system-test.skip>
				<maven.data-download.skip>false</maven.data-download.skip>
				<maven.assembly.skip>false</maven.assembly.skip>
			</properties>
		</profile>
	</profiles>

	<modules>
		<module>cloudera-framework-thirdparty</module>
		<module>cloudera-framework-client</module>
		<module>cloudera-framework-runtime</module>
		<module>cloudera-framework-testing</module>
		<module>cloudera-framework-common</module>
		<module>cloudera-framework-archetype</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>com.cloudera.parcel</groupId>
					<artifactId>cloudera-parcel-plugin</artifactId>
					<version>${parcel-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>1.8</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-archetype-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.5.5</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.6.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.3</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.9</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-eclipse-plugin</artifactId>
					<version>2.9</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.6</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>1.9.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.2</version>
					<configuration>
						<preparationGoals>clean install</preparationGoals>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-plugin-plugin</artifactId>
					<version>3.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-invoker-plugin</artifactId>
					<version>2.0.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.9</version>
					<configuration>
						<argLine>-Djava.awt.headless=true
							-Xmx${project.runtime.heap.max}m
							-XX:MaxPermSize=${project.runtime.perm.heap.max}m</argLine>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>regex-property</id>
						<goals>
							<goal>regex-property</goal>
						</goals>
						<configuration>
							<name>cdh-kuduapi.version</name>
							<value>${cdh-kudu.version}</value>
							<regex>^([0-9]+)\.([0-9]+)\.([0-9]+).*</regex>
							<replacement>$1.$2.$3</replacement>
							<failIfNoMatch>true</failIfNoMatch>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<configuration>
					<filesets>
						<fileset>
							<directory>cloudera-framework-thirdparty/src/main/repository</directory>
							<includes>
								<include>**/${project.artifactId}/**</include>
							</includes>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<inherited>false</inherited>
				<executions>
					<execution>
						<id>install-artifact</id>
						<phase>install</phase>
						<goals>
							<goal>install-file</goal>
						</goals>
						<configuration>
							<pomFile>pom.xml</pomFile>
							<file>pom.xml</file>
							<localRepositoryPath>cloudera-framework-thirdparty/src/main/repository</localRepositoryPath>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
